# mt-dataset-cli

./: .coverage  .env.example  README.md  pyproject.toml
examples/: batch_config.json
src/mt_dataset_cli/: __init__.py  cli.py  crawler_.py  downloader.py  utils.py
src/mt_dataset_cli/crawler/: __init__.py  apache_http_server.py
src/mt_dataset_cli/crawler/schemas/: __init__.py  file_system_entry.py  web_parser.py
src/mt_dataset_downloader/: get_corpora_source_list.py
src/mt_dataset_downloader/core/: __init__.py  create_model.py  fetch_html.py
src/mt_dataset_downloader/core/errors/: __init__.py  corpus_processing_error.py
src/mt_dataset_downloader/prompts/: __init__.py  prompt_explain_page.py  prompt_extract_corpora_sources.py
src/mt_dataset_downloader/schemas/: __init__.py  corpus.py  corpus_server.py  corpus_source.py  download_link.py
src/statmt_downloader/: __init__.py  cli.py  downloader.py
tests/crawler/: test_apache_http_server.py  test_apache_http_server_api.py
