[project]
name = "mt-dataset-cli"
version = "0.1.0"
description = "statmt.org 데이터셋을 다운로드하기 위한 라이브러리"
authors = [
    { name = "devcomfort", email = "im@devcomfort.me" }
]
dependencies = [
    "tqdm",
    "beautifulsoup4",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "asyncio>=3.4.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
mt-dataset-cli = "mt_dataset_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mt_dataset_cli"]
